# forgestat

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
src/forgestat/: __init__.py  calibration.py
src/forgestat/bayesian/: __init__.py  tests.py
src/forgestat/conformal/: __init__.py
src/forgestat/core/: __init__.py  _distribution_views.py  assumptions.py  distributions.py  effect_size.py  sampling.py  types.py
src/forgestat/exploratory/: __init__.py  meta.py  multi_vari.py  multivariate.py  univariate.py
src/forgestat/intelligence/: __init__.py  corrections.py  engine.py  interpret.py
src/forgestat/monitoring/: __init__.py
src/forgestat/msa/: __init__.py  agreement.py  gage_rr.py  kappa.py
src/forgestat/nonparametric/: __init__.py  rank_tests.py
src/forgestat/parametric/: __init__.py  anova.py  chi_square.py  correlation.py  equivalence.py  mixed.py  proportion.py  repeated_measures.py  split_plot.py  ttest.py  variance.py
src/forgestat/posthoc/: __init__.py  comparisons.py
src/forgestat/power/: __init__.py  sample_size.py
src/forgestat/quality/: __init__.py  acceptance.py  anom.py  capability.py  desirability.py  economics.py  variance_components.py
src/forgestat/regression/: __init__.py  _diagnostics.py  best_subsets.py  glm.py  linear.py  logistic.py  (+4 more)
tests/: test_bayesian.py  test_contract.py  test_core.py  test_exploratory.py  test_gap_closure.py  test_intelligence.py  test_mixed.py  test_msa.py  test_nonparametric.py  test_parametric.py  test_power_quality.py  test_regression.py  test_regularized.py  test_reliability.py  test_timeseries.py
(+12 files in other folders)
