[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "forgestat"
version = "0.1.0"
description = "General-purpose statistics engine — hypothesis tests, regression, Bayesian inference. Pure computation, no web framework."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [{name = "Eric Wolters", email = "eric.wolters@svend.ai"}]
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
]

[project.optional-dependencies]
regression = ["statsmodels>=0.14"]
advanced = ["scikit-learn>=1.3"]
all = ["statsmodels>=0.14", "scikit-learn>=1.3"]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py310"
line-length = 100
